--- a/app/src/main/res/layout/activity_qstorage.xml
+++ b/app/src/main/res/layout/activity_qstorage.xml
@@ -8,7 +8,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="btnReadAndWrite"
-        android:text="点击获取" />
+        android:text="点击获取多媒体文件的信息" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="非多媒体文件操作"
+        android:onClick="btnReadAndWriteNot"/>
 
     <ImageView
         android:id="@+id/iv_img"
