--- a/app/src/main/res/layout/activity_qstorage.xml
+++ b/app/src/main/res/layout/activity_qstorage.xml
@@ -19,12 +19,6 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="btnWriteImageStorage"
-        android:text="点击写和获取image文件" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:onClick="btnDeleteImageStorage"
         android:text="删除文件" />
 
@@ -34,6 +28,17 @@
         android:onClick="btnCheckReadPermission"
         android:text="点击读文件权限" />
 
+    <ImageView
+        android:id="@+id/iv_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginBottom="20dp"
+        android:background="@android:color/black" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,10 +46,5 @@
         android:onClick="btnReadAndWriteNot"
         android:text="进入非多媒体文件操作" />
 
-
-    <ImageView
-        android:id="@+id/iv_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
